возможность назначения нескольких тестов, промежуточная страница прохождения тестов
