# backend/internal/models/attempt.go
@@ -11,8 +11,9 @@ type Attempt struct {
 	ConfigID      uint      `gorm:"not null"`
 	StartTime     time.Time `gorm:"not null"`
 	EndTime       *time.Time
-	Score         float64 `gorm:"default:0"`
-	Passed        bool    `gorm:"default:false"`
+	Score         int  `gorm:"default:0"`
+	MaxScore      int  `gorm:"default:0"`
+	Passed        bool `gorm:"default:false"`
 	// Связи
 	User        User        `gorm:"foreignKey:InternID;constraint:OnDelete:CASCADE;OnUpdate:CASCADE"`
 	EventConfig EventConfig `gorm:"foreignKey:ConfigID;constraint:OnDelete:CASCADE;"`
